Fix onEndTurn() gradle issues in ECardMatchController